# PA1

./: CMakeLists.txt  DU1  DU1.c  DU2  DU2.c  DU3  DU3.c  DU3_copy  DU3_copy.c  DU4  DU4.c  DU4_unformatted  DU4_unformatted.c  DU5  DU5.c  DU5_reserve.c  DU5_working  DU5_working.c  DU6  DU6.c  DU7  DU7.c  DU7_reserve.c  ZahrivaciUloha  ZahrivaciUloha.c  cv03  cv03.c  cv05  cv05.c
